--- a/bio.Rmd
+++ b/bio.Rmd
@@ -11,4 +11,4 @@ I was born in Wenzhou, China and lived in Shanghai for 15 years before I came to
 * Fall 2013, Exchange Student, Department of Applied Probability and Statistics, University of California, Santa Barbara
 
 # Work Experience
-* Jul. 2012 - Feb. 2013, Audit Intern, KPMG, Shanghia, China
+* Jul. 2012 - Feb. 2013, Audit Intern, [KPMG](https://home.kpmg.com/cn/en/home/about/offices/shanghai.html), Shanghia, China
