--- a/bio.Rmd
+++ b/bio.Rmd
@@ -7,8 +7,9 @@ I was born in Wenzhou, China and lived in Shanghai for 15 years before I came to
 
 # Education
 * 2015 - 2020 (expected), PhD in Statistics, School of Statistics, University of Minnesota, Twin Cities.
+* 2015 - 2018, MS, Statistics, School of Statistics, University of Minnesota, Twin Cities.
 * 2010 - 2015, B.S in Statistics, School of Management, Fudan University, Shanghai, China.
 * Fall 2013, Exchange Student, Department of Applied Probability and Statistics, University of California, Santa Barbara
 
 # Work Experience
-* Jul. 2012 - Feb. 2013, Audit Intern, [KPMG](https://home.kpmg.com/cn/en/home/about/offices/shanghai.html), Shanghia, China
+* Jul. 2012 - Feb. 2013, Audit Intern, [KPMG](https://home.kpmg.com/cn/en/home/about/offices/shanghai.html), Shanghai, China
